# ChangeLog for dev-java/oracle-jdk-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.71 2014/08/10 19:01:35 sera Exp $

*oracle-jdk-bin-1.7.0.67 (10 Aug 2014)

  10 Aug 2014; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.7.0.67.ebuild:
  Version bump. #519182

  21 Jul 2014; Ralph Sennhauser <sera@gentoo.org>
  -oracle-jdk-bin-1.7.0.55.ebuild, oracle-jdk-bin-1.7.0.60.ebuild,
  -oracle-jdk-bin-1.8.0.5.ebuild:
  Remove vulnarable, keeping 7u60 for arm #517220

  21 Jul 2014; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.65.ebuild:
  Stable for x86, wrt bug #517220

  21 Jul 2014; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.65.ebuild:
  Stable for amd64, wrt bug #517220

  21 Jul 2014; Ralph Sennhauser <sera@gentoo.org>
  oracle-jdk-bin-1.7.0.65.ebuild, oracle-jdk-bin-1.8.0.11.ebuild:
  Fix install with missing xattr support #517626
  Fix selinux support #515582

*oracle-jdk-bin-1.8.0.11 (20 Jul 2014)

  20 Jul 2014; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.8.0.11.ebuild:
  Security bump #517220

*oracle-jdk-bin-1.7.0.65 (20 Jul 2014)

  20 Jul 2014; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.7.0.65.ebuild, oracle-jdk-bin-1.8.0.5.ebuild:
  Security bump #517220, drop arm as there are no distfiles as of yet
  Limit memory on x86 #467518
  Preserve xattrs for hardened #515582

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.60.ebuild:
  Stable for x86, wrt bug #511714

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.60.ebuild:
  Stable for amd64, wrt bug #511714

  03 Jun 2014; Manuel Rüger <mrueg@gentoo.org> oracle-jdk-bin-1.7.0.60.ebuild:
  Re-add ~arm keyword to Slot 1.7

*oracle-jdk-bin-1.7.0.60 (28 May 2014)

  28 May 2014; Tom Wijsman <TomWij@gentoo.org> +oracle-jdk-bin-1.7.0.60.ebuild:
  Version bump to 1.7.0.60; fixes bug #511714, reported by Robert Forsman.
